2009-01-14  Andreas Nilsson  <nisses.mail@home.se>

	* www.gnome.org/friends/css/friends.css: fixed rounded corners
	for webkit based browsers.

2008-01-13  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/img/flash/new-friends-of-gnome.png,
	www.gnome.org/img/flash/Makefile.am,
	www.gnome.org/index.wml: add news entry for the new Friends of GNOME
	website.

2009-01-12  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/new-friends: move new FoG website to the final
	directory.

2009-01-12  Lucas Rocha  <lucasr@gnome.org>

	* configure.ac, www.gnome.org/friends: temporaly remove
	old Friends of GNOME website.

2009-01-12  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/new-friends/step2.wml: add alexl

2009-01-09  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/new-friends/step2.wml: add more people

2009-01-07  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/index.wml: add (late) news about GNOME Hispano award.

2009-01-07  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/press/releases/2008-12-sugarlabs.wml: small late
	update, as requested by Stormy.

2008-01-07  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/new-friends/index.wml: add link to the list of
	previous donors.
	* www.gnome.org/new-friends/Makefile.am, www.gnome.org/htaccess,
	www.gnome.org/new-friends/htaccess: define php handler on new-friends
	htaccess files instead of the global one.

2009-01-07  daniel g. siegel <dgsiegel@gmail.com>

	* projects.gnome.org/cheese/download.html,
	  projects.gnome.org/cheese/index.html: 
	  populate the cheese 2.25.4 release

2008-01-06  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/htaccess: add php handler for
	www.gnome.org/new-friends/step2.php.

2008-01-06  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/new-friends/step2.php,
	www.gnome.org/new-friends/Makefile.am: rename to step2.php to
	step2.wml.

2008-01-06  Lucas Rocha  <lucasr@gnome.org>

	* configure.in, www.gnome.org/new-friends/Makefile.am,