@@ -9,8 +9,12 @@ body {
 }
 
 h3 {
-	margin: 0px;
+	margin: 0.5em 0 0;
 	padding: 0px;
+}
+
+div.box h3 {
+	margin: 0px;
 }
 
 h5 {
