@@ -1,5 +1,9 @@
 2009-01-14  Andreas Nilsson  <nisses.mail@home.se>
 
+	* www.gnome.org/friends/css/friends.css: some spacing of h3 elements.
+
+2009-01-14  Andreas Nilsson  <nisses.mail@home.se>
+
 	* www.gnome.org/friends/css/friends.css: fixed rounded corners
 	for webkit based browsers.
 
